crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__lists__acceptance_test_1_length.snap
---
source: crates/nash-codegen/src/build/tests/source/lists.rs
assertion_line: 1
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\nlength xs =\n    case xs of\n        [] -> 0\n        _ :: rest -> addInteger 1 (length rest)\nmain = equalsInteger (length [1, 2, 3]) 3\n"
---
--- core
let fromInt#3 : int -> int = \value#9 : int -> value#9 in
let length#2 : list 'erased -> int = (\self#10 : @self (list 'erased -> int) -> self#10 self#10) (\self#10 : @self (list 'erased -> int) xs#4 : list 'erased -> let match#6 : list 'erased = xs#4 in
case@List match#6 of
  Nil -> fromInt#3 0
  Cons field#7 field#8 -> let rest#5 : list 'erased = field#8 in
  addInteger (fromInt#3 1) (self#10 self#10 rest#5)) in
let main#1 : bool = equalsInteger (length#2 (mkCons (fromInt#3 1) (mkCons (fromInt#3 2) (mkCons (fromInt#3 3) (con (list integer) []))))) (fromInt#3 3) in
main#1
--- uplc
(program 1.1.0
  [(lam fromInt_3
    [(lam length_2
      [(lam main_1 main_1)
        [[(builtin equalsInteger)
          [length_2
            [[(force (builtin mkCons)) [fromInt_3 (con integer 1)]]
              [[(force (builtin mkCons)) [fromInt_3 (con integer 2)]]
                [[(force (builtin mkCons)) [fromInt_3 (con integer 3)]] (con (list integer) [])]]]]]
          [fromInt_3 (con integer 3)]]])
      [(lam self_10 [self_10 self_10])
        (lam self_10
          (lam xs_4
            [(lam match_6
              (case
                match_6
                (lam field_7
                  (lam field_8
                    [(lam rest_5
                      [[(builtin addInteger) [fromInt_3 (con integer 1)]] [[self_10 self_10] rest_5]])
                      field_8]))
                [fromInt_3 (con integer 0)]))
              xs_4]))]])
    (lam value_9 value_9)])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 2605143, memory: 12903
