crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__lists__acceptance_test_2_repeat.snap
---
source: crates/nash-codegen/src/build/tests/source/lists.rs
assertion_line: 17
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\nrepeat x n =\n    if lessThanEqualsInteger n 0 then []\n    else mkCons x (repeat x (subtractInteger n 1))\nmain = eq (repeat #\"61696b656e\" 2) [#\"61696b656e\", #\"61696b656e\"]\n"
---
--- core
let fromBool#8 : bool -> bool = \value#27 : bool -> value#27 in
let eq#16 : bytes -> bytes -> bool = equalsByteString in
let eq#2 : list 'erased -> list 'erased -> bool = (\self#29 : @self (list 'erased -> list 'erased -> bool) -> self#29 self#29) (\self#29 : @self (list 'erased -> list 'erased -> bool) xs#6 : list 'erased ys#7 : list 'erased -> let match#20 : list 'erased = xs#6 in
case@List match#20 of
  Nil -> let match#9 : list 'erased = ys#7 in
  case@List match#9 of
    Nil -> fromBool#8 true
    Cons field#10 field#11 -> fromBool#8 false
  Cons field#21 field#22 -> let x#12 : 'erased = field#21 in
  let restX#13 : list 'erased = field#22 in
  let match#17 : list 'erased = ys#7 in
  case@List match#17 of
    Nil -> fromBool#8 false
    Cons field#18 field#19 -> let y#14 : 'erased = field#18 in
    let restY#15 : list 'erased = field#19 in
    case@Bool eq#16 x#12 y#14 of
      True -> self#29 self#29 restX#13 restY#15
      False -> false) in
let fromInt#5 : int -> int = \value#26 : int -> value#26 in
let repeat#3 : bytes -> int -> list bytes = \x#23 : bytes n#24 : int -> (\self#28 : @self (int -> list bytes) -> self#28 self#28) (\self#28 : @self (int -> list bytes) n#24 : int -> case@Bool lessThanEqualsInteger n#24 (fromInt#5 0) of
  True -> (con (list bytestring) [])
  False -> mkCons x#23 (self#28 self#28 (subtractInteger n#24 (fromInt#5 1)))) n#24 in
let fromBytes#4 : bytes -> bytes = \value#25 : bytes -> value#25 in
let main#1 : bool = eq#2 (repeat#3 (fromBytes#4 (con bytestring #61696b656e)) (fromInt#5 2)) (mkCons (fromBytes#4 (con bytestring #61696b656e)) (mkCons (fromBytes#4 (con bytestring #61696b656e)) (con (list bytestring) []))) in
main#1
--- uplc
(program 1.1.0
  [(lam fromBool_8
    [(lam eq_16
      [(lam eq_2
        [(lam fromInt_5
          [(lam repeat_3
            [(lam fromBytes_4
              [(lam main_1 main_1)
                [[eq_2
                  [[repeat_3 [fromBytes_4 (con bytestring #61696b656e)]]
                    [fromInt_5 (con integer 2)]]]
                  [[(force (builtin mkCons)) [fromBytes_4 (con bytestring #61696b656e)]]
                    [[(force (builtin mkCons)) [fromBytes_4 (con bytestring #61696b656e)]]
                      (con (list bytestring) [])]]]])
              (lam value_25 value_25)])
            (lam x_23
              (lam n_24
                [[(lam self_28 [self_28 self_28])
                  (lam self_28
                    (lam n_24
                      (case
                        [[(builtin lessThanEqualsInteger) n_24] [fromInt_5 (con integer 0)]]
                        [[(force (builtin mkCons)) x_23]
                          [[self_28 self_28]
                            [[(builtin subtractInteger) n_24] [fromInt_5 (con integer 1)]]]]
                        (con (list bytestring) []))))]
                  n_24]))])
          (lam value_26 value_26)])
        [(lam self_29 [self_29 self_29])
          (lam self_29
            (lam xs_6
              (lam ys_7
                [(lam match_20
                  (case
                    match_20
                    (lam field_21
                      (lam field_22
                        [(lam x_12
                          [(lam restX_13
                            [(lam match_17
                              (case
                                match_17
                                (lam field_18
                                  (lam field_19
                                    [(lam y_14
                                      [(lam restY_15
                                        (case
                                          [[eq_16 x_12] y_14]
                                          (con bool False)
                                          [[[self_29 self_29] restX_13] restY_15]))
                                        field_19])
                                      field_18]))
                                [fromBool_8 (con bool False)]))
                              ys_7])
                            field_22])
                          field_21]))
                    [(lam match_9
                      (case
                        match_9
                        (lam field_10 (lam field_11 [fromBool_8 (con bool False)]))
                        [fromBool_8 (con bool True)]))
                      ys_7]))
                  xs_6])))]])
      (builtin equalsByteString)])
    (lam value_27 value_27)])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 4346547, memory: 23137
