crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__lists__acceptance_test_4_concat_no_anon_func.snap
---
source: crates/nash-codegen/src/build/tests/source/lists.rs
assertion_line: 49
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\nfoldr xs f zero =\n    case xs of\n        [] -> zero\n        x :: rest -> f x (foldr rest f zero)\nprepend x xs = mkCons x xs\nconcat left right = foldr left prepend right\nmain = eq (concat [1, 2, 3] [4, 5, 6]) [1, 2, 3, 4, 5, 6]\n"
---
--- core
let fromBool#7 : bool -> bool = \value#27 : bool -> value#27 in
let eq#15 : int -> int -> bool = equalsInteger in
let eq#2 : list 'erased -> list 'erased -> bool = (\self#39 : @self (list 'erased -> list 'erased -> bool) -> self#39 self#39) (\self#39 : @self (list 'erased -> list 'erased -> bool) xs#5 : list 'erased ys#6 : list 'erased -> let match#19 : list 'erased = xs#5 in
case@List match#19 of
  Nil -> let match#8 : list 'erased = ys#6 in
  case@List match#8 of
    Nil -> fromBool#7 true
    Cons field#9 field#10 -> fromBool#7 false
  Cons field#20 field#21 -> let x#11 : 'erased = field#20 in
  let restX#12 : list 'erased = field#21 in
  let match#16 : list 'erased = ys#6 in
  case@List match#16 of
    Nil -> fromBool#7 false
    Cons field#17 field#18 -> let y#13 : 'erased = field#17 in
    let restY#14 : list 'erased = field#18 in
    case@Bool eq#15 x#11 y#13 of
      True -> self#39 self#39 restX#12 restY#14
      False -> false) in
let foldr#24 : list 'erased -> ('erased -> 'erased -> 'erased) -> 'erased -> 'erased = \xs#28 : list 'erased (f#29 : 'erased -> 'erased -> 'erased) zero#30 : 'erased -> (\self#38 : @self (list 'erased -> 'erased) -> self#38 self#38) (\self#38 : @self (list 'erased -> 'erased) xs#28 : list 'erased -> let match#33 : list 'erased = xs#28 in
case@List match#33 of
  Nil -> zero#30
  Cons field#34 field#35 -> let x#31 : 'erased = field#34 in
  let rest#32 : list 'erased = field#35 in
  f#29 x#31 (self#38 self#38 rest#32)) xs#28 in
let prepend#25 : 'erased -> list 'erased -> list 'erased = \x#36 : 'erased xs#37 : list 'erased -> mkCons x#36 xs#37 in
let concat#3 : list 'erased -> list 'erased -> list 'erased = \left#22 : list 'erased right#23 : list 'erased -> foldr#24 left#22 prepend#25 right#23 in
let fromInt#4 : int -> int = \value#26 : int -> value#26 in
let main#1 : bool = eq#2 (concat#3 (mkCons (fromInt#4 1) (mkCons (fromInt#4 2) (mkCons (fromInt#4 3) (con (list integer) [])))) (mkCons (fromInt#4 4) (mkCons (fromInt#4 5) (mkCons (fromInt#4 6) (con (list integer) []))))) (mkCons (fromInt#4 1) (mkCons (fromInt#4 2) (mkCons (fromInt#4 3) (mkCons (fromInt#4 4) (mkCons (fromInt#4 5) (mkCons (fromInt#4 6) (con (list integer) []))))))) in
main#1
--- uplc
(program 1.1.0
  [(lam fromBool_7
    [(lam eq_15
      [(lam eq_2
        [(lam foldr_24
          [(lam prepend_25
            [(lam concat_3
              [(lam fromInt_4
                [(lam main_1 main_1)
                  [[eq_2
                    [[concat_3
                      [[(force (builtin mkCons)) [fromInt_4 (con integer 1)]]
                        [[(force (builtin mkCons)) [fromInt_4 (con integer 2)]]
                          [[(force (builtin mkCons)) [fromInt_4 (con integer 3)]] (con (list integer) [])]]]]
                      [[(force (builtin mkCons)) [fromInt_4 (con integer 4)]]
                        [[(force (builtin mkCons)) [fromInt_4 (con integer 5)]]
                          [[(force (builtin mkCons)) [fromInt_4 (con integer 6)]] (con (list integer) [])]]]]]
                    [[(force (builtin mkCons)) [fromInt_4 (con integer 1)]]
                      [[(force (builtin mkCons)) [fromInt_4 (con integer 2)]]
                        [[(force (builtin mkCons)) [fromInt_4 (con integer 3)]]
                          [[(force (builtin mkCons)) [fromInt_4 (con integer 4)]]
                            [[(force (builtin mkCons)) [fromInt_4 (con integer 5)]]
                              [[(force (builtin mkCons)) [fromInt_4 (con integer 6)]] (con (list integer) [])]]]]]]]])
                (lam value_26 value_26)])
              (lam left_22 (lam right_23 [[[foldr_24 left_22] prepend_25] right_23]))])
            (lam x_36 (lam xs_37 [[(force (builtin mkCons)) x_36] xs_37]))])
          (lam xs_28
            (lam f_29
              (lam zero_30
                [[(lam self_38 [self_38 self_38])
                  (lam self_38
                    (lam xs_28
                      [(lam match_33
                        (case
                          match_33
                          (lam field_34
                            (lam field_35
                              [(lam x_31 [(lam rest_32 [[f_29 x_31] [[self_38 self_38] rest_32]]) field_35])
                                field_34]))
                          zero_30))
                        xs_28]))]
                  xs_28])))])
        [(lam self_39 [self_39 self_39])
          (lam self_39
            (lam xs_5
              (lam ys_6
                [(lam match_19
                  (case
                    match_19
                    (lam field_20
                      (lam field_21
                        [(lam x_11
                          [(lam restX_12
                            [(lam match_16
                              (case
                                match_16
                                (lam field_17
                                  (lam field_18
                                    [(lam y_13
                                      [(lam restY_14
                                        (case
                                          [[eq_15 x_11] y_13]
                                          (con bool False)
                                          [[[self_39 self_39] restX_12] restY_14]))
                                        field_18])
                                      field_17]))
                                [fromBool_7 (con bool False)]))
                              ys_6])
                            field_21])
                          field_20]))
                    [(lam match_8
                      (case
                        match_8
                        (lam field_9 (lam field_10 [fromBool_7 (con bool False)]))
                        [fromBool_7 (con bool True)]))
                      ys_6]))
                  xs_5])))]])
      (builtin equalsInteger)])
    (lam value_27 value_27)])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 9575528, memory: 51686
